BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/IdProjectWrongFormatException.java
package com.example.demo.error;

public class IdProjectWrongFormatException  extends RuntimeException {
	 public  IdProjectWrongFormatException() {
	        super(" id project not number ");
	    }
}
